Backend: updated swagger doc, added get apis for test metadata, added galvanalyzer apis.
